// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should render button variant of link 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <button
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="button"
    type="button"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </button>
</div>
`;

exports[`<Link /> should render disabled button variant of link 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: not-allowed;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: hsla(218,19%,81%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <button
    aria-disabled="true"
    class="c0"
    cursor="not-allowed"
    data-blade-component="link"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        color="action.text.link.disabled"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </button>
</div>
`;

exports[`<Link /> should render link with default properties 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with default iconPosition 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
}

.c3 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        display="flex"
      >
        <svg
          aria-hidden="true"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(213, 89%, 56%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with left iconPosition 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
}

.c3 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        display="flex"
      >
        <svg
          aria-hidden="true"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(213, 89%, 56%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with right iconPosition 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
}

.c2 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      >
        Learn More
      </div>
      <div
        class="c3"
        display="flex"
      >
        <svg
          aria-hidden="true"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(213, 89%, 56%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </a>
</div>
`;

exports[`<Link /> should render link with icon without text 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0px;
}

.c3 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        display="flex"
      >
        <svg
          aria-hidden="true"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(213, 89%, 56%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
        color="action.text.link.default"
        font-size="100"
        font-weight="bold"
      />
    </div>
  </a>
</div>
`;

exports[`<Link /> should render with small size 1`] = `
.c0 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c0 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c0:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
}

.c3 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <a
    aria-disabled="false"
    class="c0"
    cursor="pointer"
    data-blade-component="link"
    role="link"
  >
    <div
      class="c1 content-container"
      display="flex"
    >
      <div
        class="c2"
        display="flex"
      >
        <svg
          aria-hidden="true"
          data-blade-component="icon"
          fill="none"
          height="12px"
          viewBox="0 0 24 24"
          width="12px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(213, 89%, 56%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(213, 89%, 56%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
        color="action.text.link.default"
        font-size="75"
        font-weight="bold"
      >
        Learn More
      </div>
    </div>
  </a>
</div>
`;
